--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/vielheit_development
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
