--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ dist/
 # Flycheck
 flycheck_*.el
 
-# server auth directory
+# server com.vielheit.core.auth directory
 /server/
 
 # projectiles files
