Revert "JWT,... it compiles"
This reverts commit 8ef7f1dedf5fcb53e5a817ce7c7f0412eaccd6b3.

--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,7 @@ dist/
 # Flycheck
 flycheck_*.el
 
-# server com.vielheit.core.auth directory
+# server auth directory
 /server/
 
 # projectiles files
