--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+vielheit.security.jwt.tokenExpiratoinTime=15
+vielheit.security.jwt.refreshtokenExpirationTime=60
+vielheit.security.jwt.tokenIssuer=http://vielhe.it
