validation exception mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-vielheit.security.jwt.tokenExpiratoinTime=15
-vielheit.security.jwt.refreshtokenExpirationTime=60
-vielheit.security.jwt.tokenIssuer=http://vielhe.it
+jwt.refresh-token-exp-time=60
+jwt.token-expiration-time=15
+jwt.token-issuer=vielheit
