fixes for docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/vielheit_development
+spring.datasource.url=jdbc:postgresql://172.17.0.1:5432/vielheit_development
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.platform=postgres
