--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
-spring.data.neo4j.uri=http://neo4j:neo4jdev@localhost:7474
+spring.data.neo4j.uri=http://neo4j:neo4jdev@172.17.0.1:7474
 spring.data.neo4j.embedded.enabled=false
 spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=neo4jdev
