--- a/src/main/resources/ogm.properties
+++ b/src/main/resources/ogm.properties
@@ -1,2 +1,2 @@
 driver=org.neo4j.ogm.drivers.http.driver.HttpDriver
-URI=http://neo4j:neo4jdev@localhost:7474
+URI=http://neo4j:neo4jdev@172.17.0.1:7474
