--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,12 @@ services:
     image: jmcelwain/vielheit-services:latest
     volumes:
       - ./target/:/www/
+    links:
+      - postgres
+      - neo4j
     ports:
       - "8080:8080"
-    command: ["./wait-for-it.sh", "172.17.0.1:5432", "172.17.0.1:7474", "-t", "20", "--", "java", "-jar", "./www/vielheit-services-0.0.1-SNAPSHOT.jar"]
+    command: ["./wait-for-it.sh", "postgres:5432", "neo4j:7474", "-t", "20", "--", "java", "-jar", "./www/vielheit-services-0.0.1-SNAPSHOT.jar"]
   postgres:
     image: postgres:latest
     ports:
