--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "^3.0.0"
   },
   "scripts": {
-    "clean": "rimraf ./dist",
+    "clean": "rimraf dist",
     "compile": "better-npm-run compile",
     "lint": "eslint bin build config server src tests",
     "lint:fix": "npm run lint -- --fix",
@@ -23,7 +23,7 @@
   },
   "betterScripts": {
     "compile": {
-      "command": "node ./bin/compile",
+      "command": "node bin/compile",
       "env": {
         "DEBUG": "app:*"
       }
@@ -56,16 +56,16 @@
       }
     },
     "start": {
-      "command": "node ./bin/dev-server",
+      "command": "node bin/dev-server",
       "env": {
         "DEBUG": "app:*"
       }
     },
     "test": {
-      "command": "node ./node_modules/.bin/cucumber-js",
+      "command": "node ./node_modules/karma/bin/karma start config/karma.config",
       "env": {
         "NODE_ENV": "test",
-        "DEBUG": "test:*"
+        "DEBUG": "app:*"
       }
     }
   },
@@ -121,7 +121,6 @@
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "codecov": "^1.0.1",
-    "cucumber": "^2.0.0-rc.7",
     "enzyme": "^2.0.0",
     "eslint": "^3.0.1",
     "eslint-config-standard": "^6.0.0",
