--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -107,7 +107,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.0.0",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
@@ -116,6 +116,10 @@
     "yargs": "^6.3.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react": "^15.0.21",
+    "@types/redux-thunk": "^2.1.0",
+    "awesome-typescript-loader": "^3.1.2",
     "babel-eslint": "^7.1.0",
     "babel-plugin-import": "^1.1.1",
     "babel-plugin-istanbul": "^3.0.0",
@@ -148,6 +152,7 @@
     "redbox-react": "^1.2.10",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
+    "typescript": "^2.2.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
