--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -117,7 +117,12 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/history": "^4.5.0",
     "@types/react": "^15.0.21",
+    "@types/react-dom": "^0.14.23",
+    "@types/react-redux": "^4.4.38",
+    "@types/react-router": "^3.0.0",
+    "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "awesome-typescript-loader": "^3.1.2",
     "babel-eslint": "^7.1.0",
