--- a/src/main/webapp/tsconfig.json
+++ b/src/main/webapp/tsconfig.json
@@ -1,21 +1,25 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "module": "commonjs",
-        "target": "ES6",
-        "lib": ["es7", "dom"],
-        "experimentalDecorators": true,
-        "jsx": "react",
-        "strictNullChecks": true,
-        "allowSyntheticDefaultImports": true
-    },
-    "include": [
-      "src"
+  "compilerOptions": {
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "module": "commonjs",
+    "target": "ES6",
+    "experimentalDecorators": true,
+    "lib": [
+      "es7",
+      "dom"
     ],
-    "exclude": [
-        "node_modules",
-        "typings"
-    ]
+    "experimentalDecorators": true,
+    "jsx": "react",
+    "strictNullChecks": true,
+    "allowSyntheticDefaultImports": true
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "typings"
+  ]
 }
