--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -107,6 +107,7 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-saga": "^0.14.6",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
