--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+log4j.logger.org.hibernate.transaction=DEBUG,R
+log4j.logger.org.springframework.transaction=DEBUG,R
+
 
 spring.data.neo4j.uri=http://neo4j:neo4jdev@localhost:7474
 spring.data.neo4j.embedded.enabled=false
