--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 log4j.logger.org.hibernate.transaction=DEBUG,R
 log4j.logger.org.springframework.transaction=DEBUG,R
 
+spring.redis.host=127.0.0.1
 
 spring.data.neo4j.uri=http://neo4j:neo4jdev@localhost:7474
 spring.data.neo4j.embedded.enabled=false
