fix relative imports

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.data.neo4j.username=neo4j
 spring.data.neo4j.password=neo4jdev
 
 jwt.refresh-token-exp-time=60
-jwt.token-expiration-time=1
+jwt.token-expiration-time=15
 jwt.token-issuer=vielheit
