--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ services:
     ports:
       - "7474:7474"
       - "7687:7687"
+
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - "6379:6379"
