--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   jpa:
     properties:
       dialect: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
 vielheit:
   db:
     url: jdbc:postgresql://localhost:5432/vielheit
@@ -11,6 +12,9 @@ vielheit:
     uri: bolt://localhost:7687
     username: neo4j
     password: vielheit
+  redis:
+    host: localhost
+    port: 6379
 
 ---
 spring:
