--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.datasource.initialization-mode=always
+management.endpoints.web.cors.allowed-origins=http://localhost:3000
+management.endpoints.web.cors.allowed-methods=GET,POST
